--- a/style/style-main.css
+++ b/style/style-main.css
@@ -101,3 +101,17 @@ body{
       border-width: 10px;
       margin-top: 30px;
   }
+  input:invalid {
+    border: 2px dashed red;
+  }
+  input:valid {
+    border: 2px solid black;
+  }
+  input:invalid:required {
+    background-image: linear-gradient(to right, pink, lightgreen);
+  }
+  #new-stand {
+      border-style: ridge;
+     border-color: slategray;
+  }
+  
