--- a/style/style-main.css
+++ b/style/style-main.css
@@ -6,8 +6,9 @@ header{
 
 
 }
+
 #title{
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: 'Piedra', cursive;
     font-size: 69px;
     text-align: center;
     font: bold;
@@ -100,6 +101,11 @@ body{
       border-color:coral;
       border-width: 10px;
       margin-top: 30px;
+      font-family: Georgia, 'Times New Roman', Times, serif;
+      font-size: 2em;
+      padding: 20px;
+      letter-spacing: 2px;
+      
   }
   input:invalid {
     border: 2px dashed red;
@@ -114,4 +120,13 @@ body{
       border-style: ridge;
      border-color: slategray;
   }
-  
+  p*{
+      margin-top: 20px;
+  }
+  #contact{
+      text-shadow:3px 3px 5px darkred;
+  }
+  .location{
+      text-shadow: 5px 5px 8px brown;
+     
+  }
